# SoundunCloud

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json
auth-service/: .dockerignore  Cargo.toml  Dockerfile
auth-service/src/: main.rs
scripts/: write-latest-json.ps1
src/: App.css  App.tsx  index.css  main.tsx  soundcloud-widget.d.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_player.rs  auth_backend.rs  lib.rs  main.rs  tray.rs
src/app/: AppRoot.tsx  HybridShell.tsx  NativeWorkspace.tsx
src/components/: ThemeProvider.tsx  UpdateChecker.tsx
src/components/layout/: AppShell.tsx  NowPlayingBar.tsx  Sidebar.tsx  Titlebar.tsx
src/components/music/: LikeButton.tsx  PlaylistCard.tsx  QueuePanel.tsx  TrackCard.tsx
src/components/ui/: AppImage.tsx  Avatar.tsx  HorizontalScroll.tsx
src/data/: catalog.ts
src/lib/: audio.ts  cache.ts  constants.ts  soundcloud.ts  storage.ts
src/pages/: Home.tsx  Library.tsx  Login.tsx  PlaylistPage.tsx  Search.tsx  Settings.tsx  TrackPage.tsx  UserPage.tsx
src/stores/: settings.ts
src/styles/: app-shell.css
