[package]
name = "sounduncloud-desktop"
version = "0.7.0"
description = "SoundunCloud is a native desktop client for SoundCloud"
authors = ["Yabuku"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sounduncloud_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2.5.7"
tauri-plugin-dialog = "2.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
warp = "0.3"
discord-rich-presence = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "stream"], default-features = false }
futures-util = "0.3"
http = "1"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2"
tauri-plugin-single-instance = "2.4.0"
rodio = { version = "0.22.2", features = ["mp3", "symphonia-aac", "symphonia-isomp4", "symphonia-ogg"] }
cpal = "0.17"
biquad = "0.5"
souvlaki = "0.8"
raw-window-handle = "0.6"
ogg = "0.9.2"
audiopus = "0.2.0"
tauri-plugin-updater = "2"
